feat: add styles for header and top part

--- a/index.html
+++ b/index.html
@@ -5,87 +5,92 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
   <title>WildLife</title>
 </head>
 <body>
-  <section class="top">
-		<header class="header">
-			<div class="logo-container">
-				<div class="logo-image"></div>
-				<p class="logo-text">WildLife</p>
-			</div>
-			<nav class="top-nav">
-				<ul class="top-nav-list">
-					<li class="top-nav-list-item">Blog</li>
-					<li class="top-nav-list-item">Contacts</li>
-					<li class="top-nav-list-item"></li>
-					<li class="top-nav-list-item nav-list-item--active">Sign in</li>
-				</ul>
-			</nav>
-		</header>
-		<div class="top-container">
-			<div class="top-content">
-				<h1 class="top-title">Survival</h1>
-				<p class="top-paragraph">What this means is that we exist to help protect our environment and do in numbers of ways. You can save the planet by donation.</p>
-				<div class="top-button">Donate</div>
-			</div>
-		</div>
-  </section>
-  <section class="middle">
-		<div class="slider-container">
-			<h2 class="slider-title">Latest articles</h2>
-			<p class="slider-paragraph">Breaking news from the wild</p>
-			<div class="slider">
-				<div class="arrows">
-					<div class="arrow-left"></div>
-					<div class="arrow-right"></div>
-				</div>
-				<div class="slides">
-					<div class="slide">
-						<div class="slide-img"></div>
-						<h4 class="slide-title">Deer</h4>
-						<div class="slide-description">Naturalist investigation</div>
-					</div>
-					<div class="slide">
-						<div class="slide-img"></div>
-						<h4 class="slide-title">Squirrel</h4>
-						<div class="slide-description">Kamikaze squirrels</div>
-					</div>
-					<div class="slide">
-						<div class="slide-img"></div>
-						<h4 class="slide-title">Bird</h4>
-						<div class="slide-description">Birds Fight club</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="subscribe-container">
-			<h3 class="subscribe-title"></h3>
-			<form class="subscibe-form" action="">
-				<input type="email" placeholder="Email">
-				<input type="submit" value="Send">
-			</form>
-		</div>
-	</section>
-  <footer class="footer">
-		<div class="logo-container">
-			<div class="logo-image"></div>
-			<p class="logo-text">WildLife</p>
-		</div>
-		<nav class="bottom-nav">
-			<ul class="bottom-nav-list">
-				<li class="bottom-nav-list-item">Articles</li>
-				<li class="bottom-nav-list-item">About us</li>
-				<li class="bottom-nav-list-item">Learn more</li>
-			</ul>
-		</nav>
-		<contacts class="contacts">
-			<ul class="contacts-list">
-				<li class="contacts-list-item"></li>
-				<li class="contacts-list-item"></li>
-				<li class="contacts-list-item"></li>
-			</ul>
-		</contacts>
-	</footer>
+	<div class="wrapper">
+    <section class="top">
+      <header class="header">
+        <div class="logo-container">
+          <img class="logo-image" src="wildlife-logo.svg" alt="WildLife logo">
+          <p class="logo-text">WildLife</p>
+        </div>
+        <nav class="top-nav">
+          <ul class="top-nav-list">
+            <li class="top-nav-list-item">Blog</li>
+            <li class="top-nav-list-item">Contacts</li>
+            <li class="top-nav-list-icon"><img src="search-icon.png" alt="search icon"></li>
+            <li class="top-nav-list-item top-nav-list-button">Sign in</li>
+          </ul>
+        </nav>
+      </header>
+      <div class="top-container">
+        <div class="top-content">
+          <h1 class="top-title">Survival</h1>
+          <p class="top-paragraph">What this means is that we exist to help protect our environment and do in numbers of ways. You can save the planet by donation.</p>
+          <div class="top-button">Donate</div>
+        </div>
+      </div>
+    </section>
+    <section class="middle">
+      <div class="slider-container">
+        <h2 class="slider-title">Latest articles</h2>
+        <p class="slider-paragraph">Breaking news from the wild</p>
+        <div class="slider">
+          <div class="arrows">
+            <div class="arrow-left"></div>
+            <div class="arrow-right"></div>
+          </div>
+          <div class="slides">
+            <div class="slide">
+              <div class="slide-img"></div>
+              <h4 class="slide-title">Deer</h4>
+              <div class="slide-description">Naturalist investigation</div>
+            </div>
+            <div class="slide">
+              <div class="slide-img"></div>
+              <h4 class="slide-title">Squirrel</h4>
+              <div class="slide-description">Kamikaze squirrels</div>
+            </div>
+            <div class="slide">
+              <div class="slide-img"></div>
+              <h4 class="slide-title">Bird</h4>
+              <div class="slide-description">Birds Fight club</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="subscribe-container">
+        <h3 class="subscribe-title"></h3>
+        <form class="subscibe-form" action="">
+          <input type="email" placeholder="Email">
+          <input type="submit" value="Send">
+        </form>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="logo-container">
+        <div class="logo-image"></div>
+        <p class="logo-text">WildLife</p>
+      </div>
+      <nav class="bottom-nav">
+        <ul class="bottom-nav-list">
+          <li class="bottom-nav-list-item">Articles</li>
+          <li class="bottom-nav-list-item">About us</li>
+          <li class="bottom-nav-list-item">Learn more</li>
+        </ul>
+      </nav>
+      <contacts class="contacts">
+        <ul class="contacts-list">
+          <li class="contacts-list-item"></li>
+          <li class="contacts-list-item"></li>
+          <li class="contacts-list-item"></li>
+        </ul>
+      </contacts>
+    </footer>
+  </div>
 </body>
 </html>
