feat: add styles for middle section and footer

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li class="top-nav-list-item">Blog</li>
             <li class="top-nav-list-item">Contacts</li>
             <li class="top-nav-list-icon"><img src="search-icon.png" alt="search icon"></li>
-            <li class="top-nav-list-item top-nav-list-button">Sign in</li>
+            <li class="top-nav-list-button">Sign in</li>
           </ul>
         </nav>
       </header>
@@ -41,39 +41,39 @@
         <p class="slider-paragraph">Breaking news from the wild</p>
         <div class="slider">
           <div class="arrows">
-            <div class="arrow-left"></div>
-            <div class="arrow-right"></div>
+            <img class="arrow-left" src="arrow.svg">
+            <img class="arrow-right" src="arrow.svg">
           </div>
           <div class="slides">
             <div class="slide">
-              <div class="slide-img"></div>
+              <img class="slide-image" src="deer.jpg" alt="Deer"></img>
               <h4 class="slide-title">Deer</h4>
-              <div class="slide-description">Naturalist investigation</div>
+              <p class="slide-description">Naturalist investigation</p>
             </div>
             <div class="slide">
-              <div class="slide-img"></div>
+              <img class="slide-image" src="squirrel.jpg" alt="Squirrel"></img>
               <h4 class="slide-title">Squirrel</h4>
-              <div class="slide-description">Kamikaze squirrels</div>
+              <p class="slide-description">Kamikaze squirrels</p>
             </div>
             <div class="slide">
-              <div class="slide-img"></div>
+              <img class="slide-image" src="bird.jpg" alt="Bird"></img>
               <h4 class="slide-title">Bird</h4>
-              <div class="slide-description">Birds Fight club</div>
+              <p class="slide-description">Birds Fight club</p>
             </div>
           </div>
         </div>
       </div>
       <div class="subscribe-container">
-        <h3 class="subscribe-title"></h3>
+        <h3 class="subscribe-title">Get notified about new amazing articles</h3>
         <form class="subscibe-form" action="">
-          <input type="email" placeholder="Email">
-          <input type="submit" value="Send">
+          <input class="subscibe-form-area" type="email" placeholder="Email">
+          <input class="subscibe-form-button" type="submit" value="Send">
         </form>
       </div>
     </section>
     <footer class="footer">
       <div class="logo-container">
-        <div class="logo-image"></div>
+        <img class="logo-image" src="wildlife-logo.svg" alt="WildLife logo">
         <p class="logo-text">WildLife</p>
       </div>
       <nav class="bottom-nav">
@@ -85,9 +85,10 @@
       </nav>
       <contacts class="contacts">
         <ul class="contacts-list">
-          <li class="contacts-list-item"></li>
-          <li class="contacts-list-item"></li>
-          <li class="contacts-list-item"></li>
+          <li class="contacts-list-icon"><img src="facebook.svg" alt="Facebook"></li>
+          <li class="contacts-list-icon"><img src="instagram.svg" alt="Instagram"></li>
+          <li class="contacts-list-icon"><img src="pinterest.svg" alt="Pinterest"></li>
+          <li class="contacts-list-icon"><img src="telegram.svg" alt="Telegram"></li>
         </ul>
       </contacts>
     </footer>
