refactor: add assets folder for images and icons

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <section class="top">
       <header class="header">
         <div class="logo-container">
-          <img class="logo-image" src="wildlife-logo.svg" alt="WildLife logo">
+          <img class="logo-image" src="assets/wildlife-logo.svg" alt="WildLife logo">
           <p class="logo-text">WildLife</p>
         </div>
         <nav class="top-nav">
           <ul class="top-nav-list">
             <li class="top-nav-list-item">Blog</li>
             <li class="top-nav-list-item">Contacts</li>
-            <li class="top-nav-list-icon"><img src="search-icon.png" alt="search icon"></li>
+            <li class="top-nav-list-icon"><img src="assets/search-icon.png" alt="search icon"></li>
             <li class="top-nav-list-button">Sign in</li>
           </ul>
         </nav>
@@ -41,22 +41,22 @@
         <p class="slider-paragraph">Breaking news from the wild</p>
         <div class="slider">
           <div class="arrows">
-            <img class="arrow-left" src="arrow.svg">
-            <img class="arrow-right" src="arrow.svg">
+            <img class="arrow-left" src="assets/arrow.svg">
+            <img class="arrow-right" src="assets/arrow.svg">
           </div>
           <div class="slides">
             <div class="slide">
-              <img class="slide-image" src="deer.jpg" alt="Deer"></img>
+              <img class="slide-image" src="assets/deer.jpg" alt="Deer"></img>
               <h4 class="slide-title">Deer</h4>
               <p class="slide-description">Naturalist investigation</p>
             </div>
             <div class="slide">
-              <img class="slide-image" src="squirrel.jpg" alt="Squirrel"></img>
+              <img class="slide-image" src="assets/squirrel.jpg" alt="Squirrel"></img>
               <h4 class="slide-title">Squirrel</h4>
               <p class="slide-description">Kamikaze squirrels</p>
             </div>
             <div class="slide">
-              <img class="slide-image" src="bird.jpg" alt="Bird"></img>
+              <img class="slide-image" src="assets/bird.jpg" alt="Bird"></img>
               <h4 class="slide-title">Bird</h4>
               <p class="slide-description">Birds Fight club</p>
             </div>
@@ -73,7 +73,7 @@
     </section>
     <footer class="footer">
       <div class="logo-container">
-        <img class="logo-image" src="wildlife-logo.svg" alt="WildLife logo">
+        <img class="logo-image" src="assets/wildlife-logo.svg" alt="WildLife logo">
         <p class="logo-text">WildLife</p>
       </div>
       <nav class="bottom-nav">
@@ -85,10 +85,10 @@
       </nav>
       <contacts class="contacts">
         <ul class="contacts-list">
-          <li class="contacts-list-icon"><img src="facebook.svg" alt="Facebook"></li>
-          <li class="contacts-list-icon"><img src="instagram.svg" alt="Instagram"></li>
-          <li class="contacts-list-icon"><img src="pinterest.svg" alt="Pinterest"></li>
-          <li class="contacts-list-icon"><img src="telegram.svg" alt="Telegram"></li>
+          <li class="contacts-list-icon"><img src="assets/facebook.svg" alt="Facebook"></li>
+          <li class="contacts-list-icon"><img src="assets/instagram.svg" alt="Instagram"></li>
+          <li class="contacts-list-icon"><img src="assets/pinterest.svg" alt="Pinterest"></li>
+          <li class="contacts-list-icon"><img src="assets/telegram.svg" alt="Telegram"></li>
         </ul>
       </contacts>
     </footer>
