--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="assets/favicon/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="assets/favicon/android-chrome-512x512.png">
   <title>WildLife</title>
 </head>
 <body>
@@ -20,10 +25,10 @@
         </div>
         <nav class="top-nav">
           <ul class="top-nav-list">
-            <li class="top-nav-list-item">Blog</li>
-            <li class="top-nav-list-item">Contacts</li>
-            <li class="top-nav-list-icon"><img src="assets/search-icon.png" alt="search icon"></li>
-            <li class="top-nav-list-button">Sign in</li>
+            <li class="top-nav-list-item"><a href="#">Blog</a></li>
+            <li class="top-nav-list-item"><a href="#">Contacts</a></li>
+            <li class="top-nav-list-icon"><a href="#"><img src="assets/search-icon.png" alt="search icon"></a></li>
+            <li class="top-nav-list-button"><button>Sign in</button></button></li>
           </ul>
         </nav>
       </header>
@@ -31,7 +36,7 @@
         <div class="top-content">
           <h1 class="top-title">Survival</h1>
           <p class="top-paragraph">What this means is that we exist to help protect our environment and do in numbers of ways. You can save the planet by donation.</p>
-          <div class="top-button">Donate</div>
+          <button class="top-button">Donate</button>
         </div>
       </div>
     </section>
@@ -45,17 +50,17 @@
             <img class="arrow-right" src="assets/arrow.svg">
           </div>
           <div class="slides">
-            <div class="slide">
+            <div class="slide slide-01">
               <img class="slide-image" src="assets/deer.jpg" alt="Deer"></img>
               <h4 class="slide-title">Deer</h4>
               <p class="slide-description">Naturalist investigation</p>
             </div>
-            <div class="slide">
+            <div class="slide slide-02">
               <img class="slide-image" src="assets/squirrel.jpg" alt="Squirrel"></img>
               <h4 class="slide-title">Squirrel</h4>
               <p class="slide-description">Kamikaze squirrels</p>
             </div>
-            <div class="slide">
+            <div class="slide slide-03">
               <img class="slide-image" src="assets/bird.jpg" alt="Bird"></img>
               <h4 class="slide-title">Bird</h4>
               <p class="slide-description">Birds Fight club</p>
