feat: add some hover effects, add fullscreen width

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <header class="header">
         <div class="logo-container">
           <img class="logo-image" src="assets/wildlife-logo.svg" alt="WildLife logo">
-          <p class="logo-text">WildLife</p>
+          <h1 class="logo-text">WildLife</h1>
         </div>
         <nav class="top-nav">
           <ul class="top-nav-list">
@@ -34,7 +34,7 @@
       </header>
       <div class="top-container">
         <div class="top-content">
-          <h1 class="top-title">Survival</h1>
+          <h2 class="top-title">Survival</h2>
           <p class="top-paragraph">What this means is that we exist to help protect our environment and do in numbers of ways. You can save the planet by donation.</p>
           <button class="top-button">Donate</button>
         </div>
@@ -76,27 +76,29 @@
         </form>
       </div>
     </section>
-    <footer class="footer">
-      <div class="logo-container">
-        <img class="logo-image" src="assets/wildlife-logo.svg" alt="WildLife logo">
-        <p class="logo-text">WildLife</p>
-      </div>
-      <nav class="bottom-nav">
-        <ul class="bottom-nav-list">
-          <li class="bottom-nav-list-item">Articles</li>
-          <li class="bottom-nav-list-item">About us</li>
-          <li class="bottom-nav-list-item">Learn more</li>
-        </ul>
-      </nav>
-      <contacts class="contacts">
-        <ul class="contacts-list">
-          <li class="contacts-list-icon"><img src="assets/facebook.svg" alt="Facebook"></li>
-          <li class="contacts-list-icon"><img src="assets/instagram.svg" alt="Instagram"></li>
-          <li class="contacts-list-icon"><img src="assets/pinterest.svg" alt="Pinterest"></li>
-          <li class="contacts-list-icon"><img src="assets/telegram.svg" alt="Telegram"></li>
-        </ul>
-      </contacts>
-    </footer>
+    <section class="bottom">
+      <footer class="footer">
+        <div class="logo-container">
+          <img class="logo-image" src="assets/wildlife-logo.svg" alt="WildLife logo">
+          <p class="logo-text">WildLife</p>
+        </div>
+        <nav class="bottom-nav">
+          <ul class="bottom-nav-list">
+            <li class="bottom-nav-list-item"><a href="#">Articles</a></li>
+            <li class="bottom-nav-list-item"><a href="#">About us</a></li>
+            <li class="bottom-nav-list-item"><a href="#">Learn more</a></li>
+          </ul>
+        </nav>
+        <contacts class="contacts">
+          <ul class="contacts-list">
+            <li class="contacts-list-icon"><a href="#"><img src="assets/facebook.svg" alt="Facebook"></a></li>
+            <li class="contacts-list-icon"><a href="#"><img src="assets/instagram.svg" alt="Instagram"></a></li>
+            <li class="contacts-list-icon"><a href="#"><img src="assets/pinterest.svg" alt="Pinterest"></a></li>
+            <li class="contacts-list-icon"><a href="#"><img src="assets/telegram.svg" alt="Telegram"></a></li>
+          </ul>
+        </contacts>
+      </footer>
+    </section>
   </div>
 </body>
 </html>
